# FtpWebhook

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: docker-publish.yml
app/: ftp_server.py
ftp-webhook-dashboard/: package-lock.json  package.json
