[tool.poetry]
name = "ftpwebhook"
version = "0.1.0"
description = "translate ftp uploads to webhook requests"
authors = ["Josua Blejeru <josua@blejeru.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
twisted = "^24.3.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
